<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhenYouComeMerona</string>
    <string name="registerRecommend1">계정이 없으세요? 지금 </string>
    <string name="registerRecommendLink">가입 </string>
    <string name="registerRecommend2">하세요</string>

    <string name="text_label_1">홈</string>
    <string name="text_label_2">지도</string>
    <string name="text_label_3">더하기</string>
    <string name="text_label_4">알림</string>
    <string name="text_label_5">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_id">아이디를 입력하세요</string>
    <string name="register_password">비밀번호를 입력하세요</string>
    <string name="register_repassword">비밀번호를 재입력하세요</string>
    <string name="register_email">이메일을 입력하세요</string>
    <string name="register_btn">가입하기</string>
    <string name="register_cancel">취소하기</string>
    <string name="register_btn_next">다음으로</string>
    <string name="register_birth">생년월일을 선택하세요</string>
    <string name="register_submit">가입하기</string>
    <string name="register_back">뒤로가기</string>
    <string name="register_name">이름을 입력하세요</string>
    <string name="search_nickname">닉네임으로 검색</string>
    <string name="add_content">해야 할 일</string>
    <string name="add_memo">메모</string>
    <string name="add_date">날짜</string>
    <string name="add_time">시간</string>
    <string name="add_location">장소</string>
    <string name="share">공유</string>
    <string name="level">중요</string>
    <string name="search_location">장소 검색하기</string>
    <string name="search_friends">아이디로 검색하기</string>
    <string name="logo_play"><font fgcolor='#111111'>올때</font><font fgcolor='#6BF068'>,</font> <font fgcolor='#111111'>메로나</font></string>

    <string-array name="filter_spinner">
        <item>등록 순</item>
        <item>다 된 일 숨기기</item>
        <item>내가 할 일</item>
        <item>공유 된 일</item>
        <item>시간 순</item>
        <item>중요도</item>
    </string-array>

    <string-array name="my_page_setting">
        <item>설정</item>
        <item>로그아웃</item>
    </string-array>

    <string-array name="friend_setting">
        <item>친구 끊기</item>
    </string-array>
</resources>