<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/page_1"
    android:icon="@drawable/bottom_navigation_menu_home"
    android:title="@string/text_label_1"/>
<item
    android:id="@+id/page_2"
    android:enabled="true"
    android:icon="@drawable/bottom_navigation_menu_map"
    android:title="@string/text_label_2"/>
<item
    android:id="@+id/page_3"
    android:enabled="true"
    android:icon="@drawable/bottom_navigation_menu_add_circle"
    android:title="@string/text_label_3"/>
<item
    android:id="@+id/page_4"
    android:enabled="true"
    android:icon="@drawable/bottom_navigation_menu_notifications"
    android:title="@string/text_label_4"/>
<item
    android:id="@+id/page_5"
    android:enabled="true"
    android:icon="@drawable/bottom_navigation_menu_account_circle"
    android:title="@string/text_label_5"/>
</menu>

