<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.RegisterActivity2">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/background_circle" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/background_circle"
        />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/background_circle"
        />

    <RelativeLayout
        android:id="@+id/register2_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerVertical="true"
        android:padding="20dp"
        android:background="@drawable/background">


        <EditText
            android:id="@+id/et_registerName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/register_name"
            android:textColorHint="#333333"
            android:autofillHints="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_registerBirth"
            android:layout_below="@+id/et_registerName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/register_birth"
            android:textColorHint="#333333"
            android:autofillHints="no"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <EditText
            android:id="@+id/et_registerEmail"
            android:layout_below="@id/et_registerBirth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/login_edittext"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email"
            android:textColorHint="#333333"
            android:autofillHints="no" />

        <Button
            android:id="@+id/btn_register_submit"
            android:layout_below="@+id/et_registerEmail"
            android:layout_marginTop="32dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/register_submit"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"/>

        <TextView
            android:id="@+id/btn_register_back"
            android:layout_below="@id/btn_register_submit"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_back"
            android:textColor="#000000"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:focusable="true"/>
    </RelativeLayout>

</RelativeLayout>