<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashActivity">
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="520dp"
        android:layout_height="520dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-132dp"
        android:layout_marginTop="-80dp"
        android:background="@drawable/background_circle"
        />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_loginUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_edittext"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:hint="Username"
            android:textColorHint="#333333"

            android:paddingLeft="16dp"
            />

        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext"
            android:hint="Password"
            android:textColorHint="#333333"
            android:paddingLeft="16dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="144dp"
            android:layout_height="40dp"
            android:text="로그인"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_button"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registerRecommend1"/>
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="@string/registerRecommendLink"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registerRecommend2"/>
        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>